--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,13 +48,9 @@ services:
     container_name: trading-nats
     restart: unless-stopped
     command: 
-      - "-js"
-      - "-sd"
-      - "/data"
-      - "-m"
-      - "8222"
-      - "--max_payload"
-      - "8388608"
+      - "--jetstream"
+      - "--store_dir=/data"
+      - "--http_port=8222"
     ports:
       - "4222:4222"  # Client connections
       - "8222:8222"  # HTTP monitoring
