--- a/services/engine/Cargo.toml
+++ b/services/engine/Cargo.toml
@@ -17,3 +17,7 @@ tokio = { version = "1", features = ["full"] }
 
 # 4. Error handling
 anyhow = "1.0"
+
+# 5. NATS Message Queue Integration
+async-nats = "0.33"
+futures = "0.3"
